--- a/model/dog_app.ipynb
+++ b/model/dog_app.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,10 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -306,6 +304,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VGG(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU(inplace=True)\n",
+       "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (6): ReLU(inplace=True)\n",
+       "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (8): ReLU(inplace=True)\n",
+       "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (11): ReLU(inplace=True)\n",
+       "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (13): ReLU(inplace=True)\n",
+       "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (15): ReLU(inplace=True)\n",
+       "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (18): ReLU(inplace=True)\n",
+       "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (20): ReLU(inplace=True)\n",
+       "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (22): ReLU(inplace=True)\n",
+       "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (25): ReLU(inplace=True)\n",
+       "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (27): ReLU(inplace=True)\n",
+       "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (29): ReLU(inplace=True)\n",
+       "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Dropout(p=0.5, inplace=False)\n",
+       "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): Dropout(p=0.5, inplace=False)\n",
+       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VGG16"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,13 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
+    "## from PIL import Image\n",
     "import torchvision.transforms as transforms\n",
     "\n",
     "# Set PIL to be tolerant of image files that are truncated.\n",
@@ -347,7 +407,33 @@
     "    ## Load and pre-process an image from the given img_path\n",
     "    ## Return the *index* of the predicted class for that image\n",
     "    \n",
-    "    return None # predicted class index"
+    "    transform = transforms.Compose([transforms.Resize((224, 224)),\n",
+    "                                   transforms.ToTensor()])\n",
+    "    \n",
+    "    im = Image.open(img_path)\n",
+    "    \n",
+    "    img = transform(im)\n",
+    "    img = img.unsqueeze(0)\n",
+    "    if use_cuda:\n",
+    "        img = img.cuda()\n",
+    "    \n",
+    "    #print(img.shape)\n",
+    "    \n",
+    "    preds = VGG16(img)\n",
+    "    indx = torch.argmax(preds, dim=1)\n",
+    "    \n",
+    "    #print(indx)\n",
+    "    \n",
+    "    return indx # predicted class index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indx = VGG16_predict('dogImages/train/001.Affenpinscher/Affenpinscher_00001.jpg')"
    ]
   },
   {
@@ -363,17 +449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
     "    ## TODO: Complete the function.\n",
     "    \n",
-    "    return None # true/false"
+    "    indx = VGG16_predict(img_path)\n",
+    "    \n",
+    "    return True if indx >= 151 and indx <= 268 else False # true/false"
    ]
   },
   {
@@ -396,14 +482,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct dog detected:  89 %\n",
+      "Wrong dog detected:  0 %\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
-    "### on the images in human_files_short and dog_files_short.\n"
+    "### on the images in human_files_short and dog_files_short.\n",
+    "\n",
+    "human_files_short = human_files[:100]\n",
+    "dog_files_short = dog_files[:100]\n",
+    "\n",
+    "correct_dog_detected = 0\n",
+    "for d in dog_files_short:\n",
+    "    if dog_detector(d):\n",
+    "        correct_dog_detected += 1\n",
+    "\n",
+    "wrong_dog_detected = 0\n",
+    "for h in human_files_short:\n",
+    "    if dog_detector(h):\n",
+    "        wrong_dog_detected += 1\n",
+    "\n",
+    "\n",
+    "print(\"Correct dog detected: \", correct_dog_detected, \"%\")\n",
+    "print(\"Wrong dog detected: \", wrong_dog_detected, \"%\")\n"
    ]
   },
   {
