--- a/model/dog_app.ipynb
+++ b/model/dog_app.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,17 +576,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from torchvision import datasets\n",
     "\n",
-    "### TODO: Write data loaders for training, validation, and test sets\n",
-    "## Specify appropriate transforms, and batch_sizes\n"
+    "### TODO: Write data loade      rs for training, validation, and test sets\n",
+    "## Specify appropriate transforms, and batch_sizes\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResNet(\n",
+       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (relu): ReLU(inplace=True)\n",
+       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  (layer1): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer2): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer3): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer4): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+       "  (fc): Linear(in_features=512, out_features=1000, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.resnet18()"
    ]
   },
   {
@@ -616,10 +719,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
@@ -631,10 +732,168 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        ## Define layers of a CNN\n",
+    "        \n",
+    "        self.conv_0 = nn.Conv2d(3, 64, kernel_size=7, stride=2)\n",
+    "        self.bn_0 = nn.BatchNorm2d(64)\n",
+    "        self.rl_0 = nn.ReLU(True)\n",
+    "        self.pool_0 = nn.MaxPool2d(3, stride=2)\n",
+    "    \n",
+    "# layer 1\n",
+    "        self.conv_1_1_1 = nn.Conv2d(64, 64, kernel_size=3)\n",
+    "        self.bn_1_1_1 = nn.BatchNorm2d(64)\n",
+    "        self.rl_1_1_1 = nn.ReLU(True)\n",
+    "        self.conv_1_1_2 = nn.Conv2d(64, 64, kernel_size=3)\n",
+    "        self.bn_1_1_2 = nn.BatchNorm2d(64)\n",
+    "        \n",
+    "        self.conv_1_2_1 = nn.Conv2d(64, 64, kernel_size=3)\n",
+    "        self.bn_1_2_1 = nn.BatchNorm2d(64)\n",
+    "        self.rl_1_2_1 = nn.ReLU(True)\n",
+    "        self.conv_1_2_2 = nn.Conv2d(64, 64, kernel_size=3)\n",
+    "        self.bn_1_2_2 = nn.BatchNorm2d(64)\n",
+    "    \n",
+    "# layer 2\n",
+    "        self.conv_2_1_1 = nn.Conv2d(64, 128, kernel_size=3, stride=2)\n",
+    "        self.bn_2_1_1 = nn.BatchNorm2d(128)\n",
+    "        self.rl_2_1_1 = nn.ReLU(True)\n",
+    "        self.conv_2_1_2 = nn.Conv2d(128, 128, kernel_size=3)\n",
+    "        self.bn_2_1_2 = nn.BatchNorm2d(128)\n",
+    "        \n",
+    "        #downsample \n",
+    "        self.conv_2_d = nn.Conv2d(64, 128, kernel_size=1, stride=2)\n",
+    "        self.bn_2_d = nn.BatchNorm2d(128)\n",
+    "        \n",
+    "        conv_2_2_1 = nn.Conv2d(128, 128, kernel_size=3)\n",
+    "        bn_2_2_1 = nn.BatchNorm2d(128)\n",
+    "        rl_2_2_1 = nn.ReLU(True)\n",
+    "        conv_2_2_2 = nn.Conv2d(128, 128, kernel_size=3)\n",
+    "        bn_2_2_2 = nn.BatchNorm2d(128)\n",
+    "        \n",
+    "# layer 3\n",
+    "        self.conv_3_1_1 = nn.Conv2d(128, 256, kernel_size=3, stride=2)\n",
+    "        self.bn_3_1_1 = nn.BatchNorm2d(256)\n",
+    "        self.rl_3_1_1 = nn.ReLU(True)\n",
+    "        self.conv_3_1_2 = nn.Conv2d(256, 256, kernel_size=3)\n",
+    "        self.bn_3_1_2 = nn.BatchNorm2d(256)\n",
+    "        \n",
+    "        #downsample \n",
+    "        self.conv_3_d = nn.Conv2d(128, 256, kernel_size=1, stride=2)\n",
+    "        self.bn_3_d = nn.BatchNorm2d(256)\n",
+    "        \n",
+    "        conv_3_2_1 = nn.Conv2d(256, 256, kernel_size=3)\n",
+    "        bn_3_2_1 = nn.BatchNorm2d(256)\n",
+    "        rl_3_2_1 = nn.ReLU(True)\n",
+    "        conv_3_2_2 = nn.Conv2d(256, 256, kernel_size=3)\n",
+    "        bn_3_2_2 = nn.BatchNorm2d(256)\n",
+    "\n",
+    "# layer 4\n",
+    "        self.conv_4_1_1 = nn.Conv2d(256, 512, kernel_size=3, stride=2)\n",
+    "        self.bn_4_1_1 = nn.BatchNorm2d(512)\n",
+    "        self.rl_4_1_1 = nn.ReLU(True)\n",
+    "        self.conv_4_1_2 = nn.Conv2d(512, 512, kernel_size=3)\n",
+    "        self.bn_4_1_2 = nn.BatchNorm2d(512)\n",
+    "        \n",
+    "        #downsample \n",
+    "        self.conv_4_d = nn.Conv2d(256, 512, kernel_size=1, stride=2)\n",
+    "        self.bn_4_d = nn.BatchNorm2d(512)\n",
+    "        \n",
+    "        conv_4_2_1 = nn.Conv2d(512, 512, kernel_size=3)\n",
+    "        bn_4_2_1 = nn.BatchNorm2d(512)\n",
+    "        rl_4_2_1 = nn.ReLU(True)\n",
+    "        conv_4_2_2 = nn.Conv2d(512, 512, kernel_size=3)\n",
+    "        bn_4_2_2 = nn.BatchNorm2d(512)\n",
+    "    \n",
+    "        self.avg = nn.AdaptiveAvgPool2d(output_size=(1, 1))\n",
+    "        self.fc = nn.Linear(512, 133)\n",
+    "        \n",
     "    \n",
     "    def forward(self, x):\n",
     "        ## Define forward behavior\n",
+    "        \n",
+    "# TODO: need to change view\n",
+    "\n",
+    "        x = self.conv_0(x)\n",
+    "        x = self.bn_0(x)\n",
+    "        x = self.rl_0(x)\n",
+    "        x = self.pool_0(x)\n",
+    "\n",
+    "# layer 1\n",
+    "        cache = x\n",
+    "        \n",
+    "        x = self.conv_1_1_1(x)\n",
+    "        x = self.bn_1_1_1(x)\n",
+    "        x = self.rl_1_1_1(x)\n",
+    "        x = self.conv_1_1_2(x)\n",
+    "        x = self.bn_1_1_2(x)\n",
+    "        \n",
+    "        x = self.conv_1_2_1(x)\n",
+    "        x = self.bn_1_2_1(x)\n",
+    "        x = self.rl_1_2_1(x)\n",
+    "        x = self.conv_1_2_2(x)\n",
+    "        x = self.bn_1_2_2(x)\n",
+    "        \n",
+    "        x += cache\n",
+    "        cache = F.ReLU(x)\n",
+    "        \n",
+    "# layer 2\n",
+    "        x = self.conv_2_1_1(x)\n",
+    "        x = self.bn_2_1_1(x)\n",
+    "        x = self.rl_2_1_1(x)\n",
+    "        x = self.conv_2_1_2(x)\n",
+    "        x = self.bn_2_1_2(x)\n",
+    "        \n",
+    "        x = self.conv_2_d(x)\n",
+    "        x = self.bn_2_d(x)\n",
+    "        \n",
+    "        x = conv_2_2_1(x)\n",
+    "        x = bn_2_2_1(x)\n",
+    "        x = rl_2_2_1(x)\n",
+    "        x = conv_2_2_2(x)\n",
+    "        x = bn_2_2_2(x)\n",
+    "        \n",
+    "        x += cache\n",
+    "        cache = F.ReLU(x)\n",
+    "        \n",
+    "# layer 3\n",
+    "        x = self.conv_3_1_1(x)\n",
+    "        x = self.bn_3_1_1(x)\n",
+    "        x = self.rl_3_1_1(x)\n",
+    "        x = self.conv_3_1_2(x)\n",
+    "        x = self.bn_3_1_2(x)\n",
+    "        \n",
+    "        x = self.conv_3_d(x)\n",
+    "        x = self.bn_3_d(x)\n",
+    "        \n",
+    "        x = conv_3_2_1(x)\n",
+    "        x = bn_3_2_1(x)\n",
+    "        x = rl_3_2_1(x)\n",
+    "        x = conv_3_2_2(x)\n",
+    "        x = bn_3_2_2(x)\n",
+    "        \n",
+    "        x += cache\n",
+    "        cache = F.ReLU(x)\n",
+    "        \n",
+    "# layer 4        \n",
+    "        x = self.conv_4_1_1(x)\n",
+    "        x = self.bn_4_1_1(x)\n",
+    "        x = self.rl_4_1_1(x)\n",
+    "        x = self.conv_4_1_2(x)\n",
+    "        x = self.bn_4_1_2(x)\n",
+    "        \n",
+    "        x = self.conv_4_d(x)\n",
+    "        x = self.bn_4_d(x)\n",
+    "        \n",
+    "        x = conv_4_2_1(x)\n",
+    "        x = bn_4_2_1(x)\n",
+    "        x = rl_4_2_1(x)\n",
+    "        x = conv_4_2_2(x)\n",
+    "        x = bn_4_2_2(x)\n",
+    "    \n",
+    "        x = self.avg(x)\n",
+    "        x = self.fc(x)\n",
+    "\n",
     "        return x\n",
+    "    \n",
+    "\n",
     "\n",
     "#-#-# You do NOT have to modify the code below this line. #-#-#\n",
     "\n",
