--- a/model/dog_app.ipynb
+++ b/model/dog_app.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,27 +596,41 @@
     "### TODO: Write data loade      rs for training, validation, and test sets\n",
     "## Specify appropriate transforms, and batch_sizes\n",
     "\n",
-    "transform = transforms.Compose([transforms.RandomRotation(30),\n",
-    "                                transforms.RandomResizedCrop(224),\n",
-    "                                transforms.RandomHorizontalFlip(),\n",
+    "# transform = transforms.Compose([\n",
+    "#                                 transforms.RandomRotation(20),\n",
+    "#                                 transforms.RandomResizedCrop(224),\n",
+    "#                                 transforms.RandomHorizontalFlip(),\n",
+    "#                                 transforms.ToTensor()])\n",
+    "\n",
+    "# test_transform = transforms.Compose([transforms.RandomResizedCrop(224),\n",
+    "#                                      transforms.ToTensor()])\n",
+    "\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "                                transforms.CenterCrop(224),\n",
     "                                transforms.ToTensor()])\n",
     "\n",
-    "test_transform = transforms.Compose([transforms.RandomResizedCrop(224),\n",
+    "test_transform = transforms.Compose([transforms.CenterCrop(224),\n",
     "                                     transforms.ToTensor()])\n",
     "\n",
     "train_dataset = datasets.ImageFolder('dogImages/train', transform=transform)\n",
-    "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=20, shuffle=True)\n",
+    "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "\n",
     "valid_dataset = datasets.ImageFolder('dogImages/valid', transform=test_transform)\n",
-    "valid_dataloader = torch.utils.data.DataLoader(valid_dataset, batch_size=20, shuffle=True)\n",
+    "valid_dataloader = torch.utils.data.DataLoader(valid_dataset, batch_size=64, shuffle=True)\n",
     "\n",
     "test_dataset = datasets.ImageFolder('dogImages/test', transform=test_transform)\n",
-    "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=20, shuffle=True)\n",
+    "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=64, shuffle=True)\n",
     "\n",
     "loaders_scratch = dict()\n",
     "loaders_scratch['train'] = train_dataloader\n",
     "loaders_scratch['valid'] = valid_dataloader\n",
-    "loaders_scratch['test'] = test_dataloader\n"
+    "loaders_scratch['test'] = test_dataloader\n",
+    "\n",
+    "\n",
+    "# TODO: need to try normalization\n",
+    "#standard_normalization = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "#                                              std=[0.229, 0.224, 0.225])"
    ]
   },
   {
@@ -749,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1069,8 @@
     "criterion_scratch = nn.CrossEntropyLoss()\n",
     "\n",
     "### TODO: select optimizer\n",
-    "optimizer_scratch = optim.Adam(model_scratch.parameters(), lr=0.001, weight_decay=0.01)"
+    "#optimizer_scratch = optim.Adam(model_scratch.parameters(), lr=0.001, weight_decay=0.001)\n",
+    "optimizer_scratch = optim.AdamW(model_scratch.parameters(), amsgrad=True)"
    ]
   },
   {
@@ -1069,43 +1084,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1 \tTraining Loss: 4.873946 \tValidation Loss: 4.782124\n",
-      "Epoch: 2 \tTraining Loss: 4.744024 \tValidation Loss: 5.921228\n",
-      "Epoch: 3 \tTraining Loss: 4.721417 \tValidation Loss: 4.874171\n",
-      "Epoch: 4 \tTraining Loss: 4.721877 \tValidation Loss: 4.750754\n",
-      "Epoch: 5 \tTraining Loss: 4.703212 \tValidation Loss: 4.857265\n",
-      "Epoch: 6 \tTraining Loss: 4.705641 \tValidation Loss: 4.786080\n",
-      "Epoch: 7 \tTraining Loss: 4.679957 \tValidation Loss: 4.767500\n",
-      "Epoch: 8 \tTraining Loss: 4.663531 \tValidation Loss: 4.695071\n",
-      "Epoch: 9 \tTraining Loss: 4.658777 \tValidation Loss: 4.661606\n",
-      "Epoch: 10 \tTraining Loss: 4.642303 \tValidation Loss: 4.802730\n",
-      "Epoch: 11 \tTraining Loss: 4.633378 \tValidation Loss: 4.840183\n",
-      "Epoch: 12 \tTraining Loss: 4.642806 \tValidation Loss: 4.758640\n",
-      "Epoch: 13 \tTraining Loss: 4.624737 \tValidation Loss: 4.656386\n",
-      "Epoch: 14 \tTraining Loss: 4.627749 \tValidation Loss: 5.063981\n",
-      "Epoch: 15 \tTraining Loss: 4.632403 \tValidation Loss: 4.630297\n",
-      "Epoch: 16 \tTraining Loss: 4.624497 \tValidation Loss: 4.751335\n",
-      "Epoch: 17 \tTraining Loss: 4.624578 \tValidation Loss: 4.629222\n",
-      "Epoch: 18 \tTraining Loss: 4.616983 \tValidation Loss: 4.631865\n",
-      "Epoch: 19 \tTraining Loss: 4.618146 \tValidation Loss: 4.727162\n",
-      "Epoch: 20 \tTraining Loss: 4.607802 \tValidation Loss: 4.620975\n",
-      "Epoch: 21 \tTraining Loss: 4.608253 \tValidation Loss: 4.588173\n",
-      "Epoch: 22 \tTraining Loss: 4.602234 \tValidation Loss: 4.713309\n",
-      "Epoch: 23 \tTraining Loss: 4.597952 \tValidation Loss: 4.679413\n",
-      "Epoch: 24 \tTraining Loss: 4.600939 \tValidation Loss: 4.627705\n",
-      "Epoch: 25 \tTraining Loss: 4.599086 \tValidation Loss: 4.814649\n",
-      "Epoch: 26 \tTraining Loss: 4.582201 \tValidation Loss: 4.816285\n",
-      "Epoch: 27 \tTraining Loss: 4.589350 \tValidation Loss: 4.870927\n",
-      "Epoch: 28 \tTraining Loss: 4.588838 \tValidation Loss: 4.616558\n",
-      "Epoch: 29 \tTraining Loss: 4.589197 \tValidation Loss: 4.717565\n",
-      "Epoch: 30 \tTraining Loss: 4.581899 \tValidation Loss: 5.101048\n"
+      "Epoch: 1 \tTraining Loss: 4.640607 \tValidation Loss: 5.322189\n",
+      "Valid loss dicreased, save model\n",
+      "Epoch: 2 \tTraining Loss: 4.350949 \tValidation Loss: 4.441593\n",
+      "Valid loss dicreased, save model\n",
+      "Epoch: 3 \tTraining Loss: 4.177673 \tValidation Loss: 4.657924\n",
+      "Epoch: 4 \tTraining Loss: 4.076224 \tValidation Loss: 5.513385\n",
+      "Epoch: 5 \tTraining Loss: 3.962416 \tValidation Loss: 6.868788\n",
+      "Epoch: 6 \tTraining Loss: 3.877497 \tValidation Loss: 4.418048\n",
+      "Valid loss dicreased, save model\n",
+      "Epoch: 7 \tTraining Loss: 3.769556 \tValidation Loss: 4.466629\n",
+      "Epoch: 8 \tTraining Loss: 3.682217 \tValidation Loss: 4.306257\n",
+      "Valid loss dicreased, save model\n"
      ]
     },
     {
@@ -1115,8 +1112,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-53-84a6614bae8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;31m# train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m model_scratch = train(100, loaders_scratch, model_scratch, optimizer_scratch, \n\u001b[0;32m---> 70\u001b[0;31m                       criterion_scratch, use_cuda, 'model_scratch.pt')\n\u001b[0m\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;31m# load the model that got the best validation accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-53-84a6614bae8b>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;31m###################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mbatch_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m             \u001b[0;31m# move to GPU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0muse_cuda\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-39-ba8cefaec8bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[0;31m# train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m model_scratch = train(100, loaders_scratch, model_scratch, optimizer_scratch, \n\u001b[0;32m---> 71\u001b[0;31m                       criterion_scratch, use_cuda, 'model_scratch.pt')\n\u001b[0m\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;31m# load the model that got the best validation accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-39-ba8cefaec8bc>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0;31m###################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mbatch_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m             \u001b[0;31m# move to GPU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0muse_cuda\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/dog-classifier/lib/python3.6/site-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    343\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__next__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 345\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    346\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIterable\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/dog-classifier/lib/python3.6/site-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    383\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# may raise StopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 385\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_fetcher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# may raise StopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    386\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pin_memory\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    387\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpin_memory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpin_memory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/dog-classifier/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\u001b[0m in \u001b[0;36mfetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauto_collation\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1189,6 +1186,7 @@
     "            ))\n",
     "        \n",
     "        if valid_loss_min > valid_loss:\n",
+    "            print('Valid loss dicreased, save model')\n",
     "            valid_loss_min = valid_loss\n",
     "            torch.save(model_scratch.state_dict(), 'model_scratch.pt')\n",
     "        \n",
@@ -1217,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1224,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,17 +1235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 4.604064\n",
+      "Test Loss: 4.305057\n",
       "\n",
       "\n",
-      "Test Accuracy:  3% (26/836)\n"
+      "Test Accuracy: 10% (90/836)\n"
      ]
     }
    ],
